--- a/appendix.tex
+++ b/appendix.tex
@@ -57,7 +57,7 @@ With this formulation, we can take any optimization procedure that benefits from
 
 \chapter{Model Selection}
 
-\section{Extension of bias and variance to other loss functions}\label{appx:sec:biasVarianceExtensionLoss}
+\section{Bias and variance errors in other loss functions}\label{appx:sec:biasVarianceExtensionLoss}
 
 The work in~\cite{james-biasVarianceGeneral} defines what properties should be displayed by the bias and variance of an estimator in the general case.
 
@@ -144,7 +144,7 @@ EPE = \Expect_X\left[ \sum_{k=1}^{K} L( Y_K , \hat{f}(X) ) P(Y_k|X) \right] =
 \end{equation}\label{eq:classificationEPE}
 
 
-\section{Using the Vapnik-Chervonenkis (VC) Dimension for prediction error estimation }\label{appx:sec:vcDimension}
+\section{The Vapnik-Chervonenkis (VC) Dimension }\label{appx:sec:vcDimension}
 
 In Vapnik and Chervonenkis' work, the focus is put on the estimation of the prediction error through the convergence and consistency of the training error.
 To do this, the authors build a measure, the Vapnik-Chervonenkis (VC) dimension, as an important value in determining convergence speeds for different Machine Learning algorithms.
