--- a/appendix.tex
+++ b/appendix.tex
@@ -151,17 +151,17 @@ To do this, the authors build a measure, the Vapnik-Chervonenkis (VC) dimension,
 All of this theory is given in the context of functional spaces.
 
 The VC Dimension is a number based on what is called \textit{Statistical Learning Theory} (SLT).
-The theory is used to bound estimates the true expected prediction error from finite i.i.d.\ samples.
-Its advantage is that it requires weak assumptions from the data and the structure of the model, and the results are distribution independent.
+The theory is used to bound estimates of the true expected prediction error from finite i.i.d.\ samples.
+Its advantage is that it requires weak assumptions on the data and the structure of the model, and the results are distribution independent.
 
-Here we provide only a mention of VC dimension for the purpose of showing a theoretical approach to error estimation in Machine Learning methods.
+Here we only mention the VC dimension for the purpose of showing a theoretical approach to error estimation in Machine Learning methods.
 Most of the results and reasoning follows the works in \citep{cherkassky-learning2007}.
 For a more broad development of this work, \citep{vapnik-nature2000} is recommended too.
 Here we present a brief comment on the consistency of the training error with respect to the prediction error and give example bounds for classification learners.
 
 
-Vapnik-Chervonenkis discuss a theoretical framework based on the dimensions in a way which effectively lets it be constructed.
-Analytic bounds given to estimate the distance between the empirical and generalization errors.
+Vapnik-Chervonenkis discuss a theoretical framework in which the dimension of a class of approximating functions is a quantity that that can be constructed from the data.
+This allows us to have analytical estimates on the distance between the empirical and generalization errors.
 This is done for a number of known Machine Learning algorithms and the theory also provides methods to calculate these dimensions in a constructive way and for a broad class of functions.
 For cases in VC dimensions can not be calculated, authors propose sampling or experimental methods to bound it.
 
@@ -169,20 +169,19 @@ For cases in VC dimensions can not be calculated, authors propose sampling or ex
 %In a supervised learning context, we use the empirical training ($\overline{err}$) or test errors ($\overline{err}_{test}$) to estimate the $EPE$.
 
 Let $\mathcal {F} = \big \{ f(x,\theta) \mid x \in X, \theta \in \Theta \big \}$ be a class of classifiers where $f_\theta: X \rightarrow Y \, \forall f \in \mathcal {F}$.
-This is a class of functions with domain over the input dataset $X$ and which are indexed by a parameter $theta$.
-%This parameter will represent the index over the functions in $F$ and it will vary over all possible models attainable by our algorithm.
-
-As an example, in logistic regression, $theta$ can be indexed by the values of each feature's weights $x^p$.
+This is a class of functions with domain over the input dataset $X$ and which are indexed by a parameter.
+As an example, in logistic regression, the paramaters $\theta$ can be indexed by the values of each feature's weights $x^p$.
 The class $F$ will then represent the set of all possible functions from which to select the optimal model.
+%This parameter will represent the index over the functions in $F$ and it will vary over all possible models attainable by our algorithm.
 %In applications, a learner is fit from a class of functions.
 
-As it was seen before in \cref{ch:machineLearning}, a common problem in supervised learning happens when a particular learner overfits the data.
+As it was seen in \cref{ch:machineLearning}, a common problem in supervised learning happens when a particular learner overfits the data.
 In practice, we find that this is common when $n$ is \textit{small} or when the number of features is \textit{large}.
 %is fit and then used to predict new values is
 
-Incorporating the loss functions directly into the model, SLT looks at functions of the form $$Q(t,\theta) \ = \ L(f_\theta(x,y))$$.
+Incorporating the loss functions directly into the model, SLT looks at functions of the form $$Q(t,\theta) \ = \ L(f_\theta(x,y))$$
 
-$Q{\cdot,\cdot}$ is seen as a two variable function where $t=(x,y)$ represents a sample of input and output data expressed as a random variable.%, and $theta$ the class index.
+The function $Q(\cdot,\cdot)$ is bivariate, and we note $t=(x,y)$ to represent a sample of input and output data expressed as a random variable.%, and $\theta$ the class index.
 
 In this way, the $EPE(\theta)$ for any model takes the functional form
 
@@ -259,8 +258,10 @@ P\Bigg(  \left|  Err^n_{train}(\theta^*) - EPE(\theta_0) \right| > \epsilon \Big
 \end{equation}\label{eq:vapnik-binaryBoundProbability}
 
 where $poly(\Theta,n)$ is a polynomial on $n$ whose coefficients depend only on VC dimension of the class of functions $F$.
-For practical applications though, use of these bound estimates might be limited to the determination of the VC value. This becomes increasingly difficult in algorithms which are more complex and expressive, such as neural networks.
-Due to this limitation, we show in the next section a practiced approach which is an easier and direct heuristic used to estimate the $PE$.
+For practical applications though, use of these bound estimates is limited by the calculation of the VC value.
+This becomes increasingly difficult in algorithms which are more complex and expressive, such as in neural networks.
+Due to this limitation, we show in \cref{section:crossValidation} an approach which is, in comparison, widely practiced.
+It has the advantage of being easier and a simple heuristic that estimates the $EPE$.
 
 \subsection{VC for Prediction Error Bounds }\label{appx:sec:vcErrroBounds}
 
